solar-system/service.yaml

kind: Service
apiVersion: v1
metadata:
  name:  solar-system-service
spec:
  selector:
    app:  solar-system
  type:  NodePort
  ports:
  - name:  http
    protocol: TCP
    port:  80
    targetPort:  80
